<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/basketball_court_landscape" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ScrollView>


    <LinearLayout
        android:id="@+id/teams_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!--TEAM A-->
        <LinearLayout
            android:id="@+id/teamAView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!--GINASIO-->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_marginTop="8sp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ginasio" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/material_orange_500"
                android:textSize="48sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/material_amber_500"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/scores"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/twoPoints_teamA_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_weight="1"
                android:onClick="set2Points_teamA"
                android:text="@string/_2_points" />

            <Button
                android:id="@+id/threePoints_teamA_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:onClick="set3Points_teamA"
                android:text="@string/_3_points" />

            <Button
                android:id="@+id/freeThrow_teamA_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:onClick="setFreeThrow_teamA"
                android:text="@string/free_throw" />

            <TextView
                android:id="@+id/scores_area3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:layout_marginLeft="24sp"
                android:layout_marginRight="24sp"
                android:layout_weight="1"
                android:alpha=".8"
                android:background="@color/material_amber_500"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="Stats"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="18sp" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16sp">

                <Button
                    android:id="@+id/testButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="18sp"
                    android:text="Fouls"></Button>

                <TextView
                    android:id="@+id/serviceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8sp"
                    android:layout_marginLeft="24sp"
                    android:layout_marginRight="24sp"
                    android:layout_marginTop="8sp"
                    android:background="@color/material_amber_600"
                    android:gravity="center_vertical|center"
                    android:text="0"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16sp"
                android:layout_marginStart="16sp">

                <Button
                    android:id="@+id/testButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="18sp"
                    android:text="Rebound"></Button>

                <TextView
                    android:id="@+id/serviceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/testButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="18sp"
                    android:text="Steals "></Button>

                <TextView
                    android:id="@+id/serviceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>


        </LinearLayout>
        <!-- Teams Divider-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />
        <!--TEAM B-->
        <LinearLayout
            android:id="@+id/teamBView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/team_b"
                android:textColor="@color/material_amber_50"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/zero"
                android:textColor="@color/material_orange_500"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/scores_area2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="Scores"
                android:textColor="@color/material_orange_500"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoPoints_teamb_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:onClick="set2Points_teamB"
                android:text="@string/_2_points" />

            <Button
                android:id="@+id/threePoints_teamB_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:onClick="set3Points_teamB"
                android:text="@string/_3_points" />

            <Button
                android:id="@+id/freeThrow_teamB_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:onClick="setFreeThrow_teamB"
                android:text="@string/free_throw" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/teams_scores"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:background="@color/material_amber_100"
        android:gravity="center_horizontal"

        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_all_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:layout_weight="1"
            android:duplicateParentState="false"
            android:gravity="center_horizontal"
            android:onClick="resetScores"
            android:text="@string/reset" />

        <Button
            android:id="@+id/reset_all_button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:onClick="resetScores"
            android:text="Send report" />
    </LinearLayout>
</RelativeLayout>